[project]
name = "microblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtpd>=1.4.6",
    "deep-translator>=1.11.4",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "langdetect>=1.0.9",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
